--- a/Languages/ChineseSimplified (简体中文)/Keyed/Keys.xml
+++ b/Languages/ChineseSimplified (简体中文)/Keyed/Keys.xml
@@ -27,6 +27,9 @@
   <R_HyperUnity_CompResourceCovert_Gizmo_Desc>立即将容器内的物品转化为白银</R_HyperUnity_CompResourceCovert_Gizmo_Desc>
   <R_HyperUnity_CompResourceCovert_Mote>转化财富: {0}</R_HyperUnity_CompResourceCovert_Mote>
 
+  <R_HyperUnity_CompExplosiveTrigger_Gizmo_Label>引爆</R_HyperUnity_CompExplosiveTrigger_Gizmo_Label>
+  <R_HyperUnity_CompExplosiveTrigger_Gizmo_Desc>立即准备引爆爆炸物</R_HyperUnity_CompExplosiveTrigger_Gizmo_Desc>
+
   <!-- Building -->
   <R_HyperUnity_Building_BodypartRemove_Gizmo1_Label>移除全部</R_HyperUnity_Building_BodypartRemove_Gizmo1_Label>
   <R_HyperUnity_Building_BodypartRemove_Gizmo1_Desc>立即尝试批量移除全部身体部位</R_HyperUnity_Building_BodypartRemove_Gizmo1_Desc>
@@ -34,6 +37,10 @@
   <R_HyperUnity_Building_BodypartRemove_Gizmo2_Desc>立即尝试批量移除腿部部位</R_HyperUnity_Building_BodypartRemove_Gizmo2_Desc>
   <R_HyperUnity_Building_BodypartRemove_Gizmo3_Label>移除眼</R_HyperUnity_Building_BodypartRemove_Gizmo3_Label>
   <R_HyperUnity_Building_BodypartRemove_Gizmo3_Desc>立即尝试批量移除眼部部位</R_HyperUnity_Building_BodypartRemove_Gizmo3_Desc>
+  <R_HyperUnity_Building_BodypartRemove_Gizmo4_Label>随机伤害</R_HyperUnity_Building_BodypartRemove_Gizmo4_Label>
+  <R_HyperUnity_Building_BodypartRemove_Gizmo4_Desc>随机伤害一个部位</R_HyperUnity_Building_BodypartRemove_Gizmo4_Desc>
+  <R_HyperUnity_Building_BodypartRemove_Gizmo5_Label>处决</R_HyperUnity_Building_BodypartRemove_Gizmo5_Label>
+  <R_HyperUnity_Building_BodypartRemove_Gizmo5_Desc>立即通过破坏大脑来处决躺下的人</R_HyperUnity_Building_BodypartRemove_Gizmo5_Desc>
   <R_HyperUnity_Building_BodypartRemove_Mote1>床上没有小人</R_HyperUnity_Building_BodypartRemove_Mote1>
   <R_HyperUnity_Building_BodypartRemove_Mote2>没有足够药品</R_HyperUnity_Building_BodypartRemove_Mote2>
 
