--- a/Languages/ChineseSimplified (简体中文)/Keyed/Keys.xml
+++ b/Languages/ChineseSimplified (简体中文)/Keyed/Keys.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
-  
+
   <!-- Setting -->
   <R_HyperUnity_SettingCat_Label>Hyper Unity</R_HyperUnity_SettingCat_Label>
   <R_HyperUnity_SettingCat_DebugMsg_Label>调试信息</R_HyperUnity_SettingCat_DebugMsg_Label>
-  
+
   <!-- Comps -->
   <R_HyperUnity_CompSwitchGizmo_Gizmo_Label>切换开关</R_HyperUnity_CompSwitchGizmo_Gizmo_Label>
   <R_HyperUnity_CompSwitchGizmo_Gizmo_Desc>调整设备是否启动</R_HyperUnity_CompSwitchGizmo_Gizmo_Desc>
@@ -15,7 +15,8 @@
   <R_HyperUnity_CompRemoteDoor_Gizmo_Desc>远程控制门的开关</R_HyperUnity_CompRemoteDoor_Gizmo_Desc>
 
   <R_HyperUnity_CompUltimateReactor_Gizmo_Label>目标 ({0})</R_HyperUnity_CompUltimateReactor_Gizmo_Label>
-  <R_HyperUnity_CompUltimateReactor_Gizmo_Desc>选择超越反应器耗电生成的目标，当前为{0}</R_HyperUnity_CompUltimateReactor_Gizmo_Desc>
+  <R_HyperUnity_CompUltimateReactor_Gizmo_Desc>选择超越反应器耗电生成的目标，当前为{0}
+  </R_HyperUnity_CompUltimateReactor_Gizmo_Desc>
   <R_HyperUnity_CompUltimateReactor_TargetName>目标物品</R_HyperUnity_CompUltimateReactor_TargetName>
   <R_HyperUnity_CompUltimateReactor_AmountKeep>数量保持</R_HyperUnity_CompUltimateReactor_AmountKeep>
   <R_HyperUnity_CompUltimateReactor_PowerUse>物品耗能</R_HyperUnity_CompUltimateReactor_PowerUse>
@@ -31,12 +32,27 @@
   <R_HyperUnity_HediffComp_SkillDeplete_Mote>退行: {0} XP -{1}</R_HyperUnity_HediffComp_SkillDeplete_Mote>
 
   <R_HyperUnity_CompResourceCovert_Gizmo_Label>立即转化</R_HyperUnity_CompResourceCovert_Gizmo_Label>
-  <R_HyperUnity_CompResourceCovert_Gizmo_Desc>立即将容器内的物品转化为白银</R_HyperUnity_CompResourceCovert_Gizmo_Desc>
+  <R_HyperUnity_CompResourceCovert_Gizmo_Desc>立即将容器内的物品转化为贮存财富
+  </R_HyperUnity_CompResourceCovert_Gizmo_Desc>
+  <R_HyperUnity_CompResourceCovert_Gizmo_Label>立即放置</R_HyperUnity_CompResourceCovert_Gizmo_Label>
+  <R_HyperUnity_CompResourceCovert_Gizmo_Desc>立即将容器内贮存的财富放置为白银或黄金
+  </R_HyperUnity_CompResourceCovert_Gizmo_Desc>
+  <R_HyperUnity_CompResourceCovert_Gizmo1_Label>当前模式: {0}</R_HyperUnity_CompResourceCovert_Gizmo1_Label>
+  <R_HyperUnity_CompResourceCovert_Gizmo1_Desc>决定转化为的目标</R_HyperUnity_CompResourceCovert_Gizmo1_Desc>
+  <R_HyperUnity_CompResourceCovert_GizmoAuto_Label>自动转化: {0}</R_HyperUnity_CompResourceCovert_GizmoAuto_Label>
+  <R_HyperUnity_CompResourceCovert_GizmoAuto_Desc>当前自动转化状态为: {0}
+  </R_HyperUnity_CompResourceCovert_GizmoAuto_Desc>
+  <R_HyperUnity_CompResourceCovert_GizmoAutoPlace_Label>自动放置: {0}
+  </R_HyperUnity_CompResourceCovert_GizmoAutoPlace_Label>
+  <R_HyperUnity_CompResourceCovert_GizmoAutoPlace_Desc>当前自动放置状态为: {0}
+  </R_HyperUnity_CompResourceCovert_GizmoAutoPlace_Desc>
   <R_HyperUnity_CompResourceCovert_Mote>转化财富: {0}</R_HyperUnity_CompResourceCovert_Mote>
+  <R_HyperUnity_CompResourceCovert_MoteFailure>放置财富失败, 剩余: {0}</R_HyperUnity_CompResourceCovert_MoteFailure>
+  <R_HyperUnity_CompResourceCovert_Info>储存财富: {0}</R_HyperUnity_CompResourceCovert_Info>
 
   <R_HyperUnity_CompExplosiveTrigger_Gizmo_Label>引爆</R_HyperUnity_CompExplosiveTrigger_Gizmo_Label>
   <R_HyperUnity_CompExplosiveTrigger_Gizmo_Desc>立即准备引爆爆炸物</R_HyperUnity_CompExplosiveTrigger_Gizmo_Desc>
-  
+
   <R_HyperUnity_CompHediffGiver_Gizmo_Desc>选择效果附加的范围</R_HyperUnity_CompHediffGiver_Gizmo_Desc>
   <R_HyperUnity_CompHediffGiver_Gizmo_LabelA>停止</R_HyperUnity_CompHediffGiver_Gizmo_LabelA>
   <R_HyperUnity_CompHediffGiver_Gizmo_LabelB>所有</R_HyperUnity_CompHediffGiver_Gizmo_LabelB>
@@ -47,48 +63,53 @@
   <R_HyperUnity_CompThingGuardian_Gizmo_Label1>维护</R_HyperUnity_CompThingGuardian_Gizmo_Label1>
   <R_HyperUnity_CompThingGuardian_Gizmo_Desc1>切换是否允许修复范围内物品</R_HyperUnity_CompThingGuardian_Gizmo_Desc1>
   <R_HyperUnity_CompThingGuardian_Gizmo_Label2>仅殖民地</R_HyperUnity_CompThingGuardian_Gizmo_Label2>
-  <R_HyperUnity_CompThingGuardian_Gizmo_Desc2>切换是否只允许修复属于殖民地派系的物品</R_HyperUnity_CompThingGuardian_Gizmo_Desc2>
+  <R_HyperUnity_CompThingGuardian_Gizmo_Desc2>切换是否只允许修复属于殖民地派系的物品
+  </R_HyperUnity_CompThingGuardian_Gizmo_Desc2>
   <R_HyperUnity_CompThingGuardian_Gizmo_Label3>清除气体</R_HyperUnity_CompThingGuardian_Gizmo_Label3>
   <R_HyperUnity_CompThingGuardian_Gizmo_Desc3>切换是否清除房间内的气体</R_HyperUnity_CompThingGuardian_Gizmo_Desc3>
   <R_HyperUnity_CompThingGuardian_Gizmo_Label4>清除污物</R_HyperUnity_CompThingGuardian_Gizmo_Label4>
   <R_HyperUnity_CompThingGuardian_Gizmo_Desc4>切换是否清除房间内的污物</R_HyperUnity_CompThingGuardian_Gizmo_Desc4>
   <R_HyperUnity_CompThingGuardian_Mote1>不在房间内</R_HyperUnity_CompThingGuardian_Mote1>
-  
+
   <R_HyperUnity_CompTempSet_Mote1>不在房间内</R_HyperUnity_CompTempSet_Mote1>
   <R_HyperUnity_CompTempSet_Mote2>当前温度: {0}℃</R_HyperUnity_CompTempSet_Mote2>
   <R_HyperUnity_CompTempSet_Gizmo_Act_Label>激活</R_HyperUnity_CompTempSet_Gizmo_Act_Label>
   <R_HyperUnity_CompTempSet_Gizmo_Act_Desc>启动或禁用温度控制</R_HyperUnity_CompTempSet_Gizmo_Act_Desc>
   <R_HyperUnity_CompTempSet_Gizmo_Reset_Label>重置</R_HyperUnity_CompTempSet_Gizmo_Reset_Label>
   <R_HyperUnity_CompTempSet_Gizmo_Reset_Desc>重置到默认温度</R_HyperUnity_CompTempSet_Gizmo_Reset_Desc>
-  
+
   <R_HyperUnity_CompVomitCollect_Mote1>收集到{0}份呕吐物</R_HyperUnity_CompVomitCollect_Mote1>
   <R_HyperUnity_CompVomitCollect_Mote2>生成{0}份包装呕吐物</R_HyperUnity_CompVomitCollect_Mote2>
   <R_HyperUnity_CompVomitCollect_Mote3>不在房间内</R_HyperUnity_CompVomitCollect_Mote3>
   <R_HyperUnity_CompVomitCollect_Inspect1>累积原料: {0}</R_HyperUnity_CompVomitCollect_Inspect1>
-  <R_HyperUnity_CompVomitCollect_Inspect2>生成包装: </R_HyperUnity_CompVomitCollect_Inspect2>
+  <R_HyperUnity_CompVomitCollect_Inspect2>生成包装:</R_HyperUnity_CompVomitCollect_Inspect2>
   <R_HyperUnity_CompVomitCollect_Gizmo1_Label>生成包装呕吐物</R_HyperUnity_CompVomitCollect_Gizmo1_Label>
   <R_HyperUnity_CompVomitCollect_Gizmo1_Desc>启动或禁用包装呕吐物生成</R_HyperUnity_CompVomitCollect_Gizmo1_Desc>
   <R_HyperUnity_CompVomitCollect_Gizmo2_Label>清空呕吐物</R_HyperUnity_CompVomitCollect_Gizmo2_Label>
   <R_HyperUnity_CompVomitCollect_Gizmo2_Desc>清空装置内的呕吐物</R_HyperUnity_CompVomitCollect_Gizmo2_Desc>
   <R_HyperUnity_CompVomitCollect_Gizmo3_Label>收集呕吐物</R_HyperUnity_CompVomitCollect_Gizmo3_Label>
   <R_HyperUnity_CompVomitCollect_Gizmo3_Desc>收集房间内的呕吐物</R_HyperUnity_CompVomitCollect_Gizmo3_Desc>
-  
+
   <R_HyperUnity_CompEnemyStunner_Gizmo_Label>激活</R_HyperUnity_CompEnemyStunner_Gizmo_Label>
   <R_HyperUnity_CompEnemyStunner_Gizmo_Desc>对地图上的敌人造成眩晕</R_HyperUnity_CompEnemyStunner_Gizmo_Desc>
-  
-  <R_HyperUnity_CompSpawnIntoNet_Inspect1>距离下一次生成: </R_HyperUnity_CompSpawnIntoNet_Inspect1>
+
+  <R_HyperUnity_CompSpawnIntoNet_Inspect1>距离下一次生成:</R_HyperUnity_CompSpawnIntoNet_Inspect1>
 
   <!-- Building -->
   <R_HyperUnity_Building_BodypartRemove_Gizmo1_Label>移除全部</R_HyperUnity_Building_BodypartRemove_Gizmo1_Label>
-  <R_HyperUnity_Building_BodypartRemove_Gizmo1_Desc>立即尝试批量移除全部身体部位</R_HyperUnity_Building_BodypartRemove_Gizmo1_Desc>
+  <R_HyperUnity_Building_BodypartRemove_Gizmo1_Desc>立即尝试批量移除全部身体部位
+  </R_HyperUnity_Building_BodypartRemove_Gizmo1_Desc>
   <R_HyperUnity_Building_BodypartRemove_Gizmo2_Label>移除腿</R_HyperUnity_Building_BodypartRemove_Gizmo2_Label>
-  <R_HyperUnity_Building_BodypartRemove_Gizmo2_Desc>立即尝试批量移除腿部部位</R_HyperUnity_Building_BodypartRemove_Gizmo2_Desc>
+  <R_HyperUnity_Building_BodypartRemove_Gizmo2_Desc>立即尝试批量移除腿部部位
+  </R_HyperUnity_Building_BodypartRemove_Gizmo2_Desc>
   <R_HyperUnity_Building_BodypartRemove_Gizmo3_Label>移除眼</R_HyperUnity_Building_BodypartRemove_Gizmo3_Label>
-  <R_HyperUnity_Building_BodypartRemove_Gizmo3_Desc>立即尝试批量移除眼部部位</R_HyperUnity_Building_BodypartRemove_Gizmo3_Desc>
+  <R_HyperUnity_Building_BodypartRemove_Gizmo3_Desc>立即尝试批量移除眼部部位
+  </R_HyperUnity_Building_BodypartRemove_Gizmo3_Desc>
   <R_HyperUnity_Building_BodypartRemove_Gizmo4_Label>随机伤害</R_HyperUnity_Building_BodypartRemove_Gizmo4_Label>
   <R_HyperUnity_Building_BodypartRemove_Gizmo4_Desc>随机伤害一个部位</R_HyperUnity_Building_BodypartRemove_Gizmo4_Desc>
   <R_HyperUnity_Building_BodypartRemove_Gizmo5_Label>处决</R_HyperUnity_Building_BodypartRemove_Gizmo5_Label>
-  <R_HyperUnity_Building_BodypartRemove_Gizmo5_Desc>立即通过破坏大脑来处决躺下的人</R_HyperUnity_Building_BodypartRemove_Gizmo5_Desc>
+  <R_HyperUnity_Building_BodypartRemove_Gizmo5_Desc>立即通过破坏大脑来处决躺下的人
+  </R_HyperUnity_Building_BodypartRemove_Gizmo5_Desc>
   <R_HyperUnity_Building_BodypartRemove_Mote1>床上没有小人</R_HyperUnity_Building_BodypartRemove_Mote1>
   <R_HyperUnity_Building_BodypartRemove_Mote2>没有足够药品</R_HyperUnity_Building_BodypartRemove_Mote2>
 
